--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="{{ 'css/normalize.css' | asset_url }}">
     <link rel="stylesheet" href="{{ 'css/main.css' | asset_url }}">
+    <link rel="stylesheet" href="{{ 'css/contactform.css' | asset_url }}">
     <script src="{{ 'js/vendor/modernizr-2.6.2.min.js' | asset_url }}"></script>
 </head>
 <body>
